kubernetes/clusters/home/4-apps/media/audioookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: media

  annotations:
    external-dns.alpha.kubernetes.io/hostname: audiobookshelf.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: alarlab.dev
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - audiobookshelf.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: audiobookshelf.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
